--- a/ch.jester.system.swiss.simple/build.properties
+++ b/ch.jester.system.swiss.simple/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                bin/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               OSGI-INF/l10n/
