--- a/trunk/ch.jester.db.hsqldb/build.properties
+++ b/trunk/ch.jester.db.hsqldb/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                hsqldb.jar,\
-               OSGI-INF/
+               OSGI-INF/,\
+               OSGI-INF/l10n/
 jars.compile.order = .
 source.. = src
 output..=bin
