--- a/org.apache.log4j/build.properties
+++ b/org.apache.log4j/build.properties
@@ -1,5 +1,3 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
-               .,\
                org.apache.log4j_1.2.15.v201005080500.jar
+jars.compile.order = 
