--- a/org.apache.poi/.classpath
+++ b/org.apache.poi/.classpath
@@ -8,8 +8,11 @@
 	<classpathentry exported="true" kind="lib" path="poi-ooxml-schemas-3.7-20101029.jar"/>
 	<classpathentry exported="true" kind="lib" path="poi-scratchpad-3.7-20101029.jar"/>
 	<classpathentry exported="true" kind="lib" path="xmlbeans-2.3.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
